# dep2con

./: .gitignore  LICENSE  README.md  dep2con.cabal
examples/: ex01.deps  ex01.tags  ex02.cons  ex02.deps  ex02.tags  ex03.deps  ex03.tags  example1  example2
src/: Dep2Bin.hs  Dep2Con.hs  PrintCon.hs  PrintDep.hs
src/Data/String/: Utils.hs
src/Language/: POS.hs  Word.hs
src/Language/Conversion/: Con2Bin.hs  Dep2Bin.hs  Dep2Con.hs
src/Language/POS/: Parse.hs
src/Language/Structure/: Binary.hs  Constituency.hs  Dependency.hs
src/Language/Structure/Constituency/: Parse.hs
src/Language/Structure/Conversion/: Dep2Con.hs
src/Language/Structure/Dependency/: Parse.hs
src/Language/Word/: Parse.hs
test/: TestConversion.hs  example1.test
